--- a/src/example/style.css
+++ b/src/example/style.css
@@ -13,7 +13,9 @@ details {
 }
 
 details[open] summary {
-  background-color: lightblue;
+  background-color: lightgray;
+  z-index: 1;
+  border-bottom: none;
 }
 
 details[open]::details-content {
@@ -24,15 +26,22 @@ summary {
   order: 0;
   display: block;
   padding: .5rem 1rem;
-  background-color: lightgoldenrodyellow;
+  
   cursor: pointer;
+  /*border: 1px solid grey;*/
+  border-bottom: none;
+  border-radius: .5rem .5rem 0 0;
+  border: 1px solid grey;
+  margin-right: -1px;
 }
 
 details section {
+  margin-top: -1px;
   order: 1;
   padding: 1rem;
   width: 100%;
   background-color: lightgrey;
+  border: 1px solid grey
 }
 
 .container {
@@ -48,7 +57,7 @@ details section {
 }
 
 .zone {
-  border: 1px solid #444;
+  border: 1px solid grey;
   background-color: #4442;
   padding: 1rem;
   display: flex;
@@ -99,6 +108,10 @@ select {
     padding-top: 0;
     pointer-events: none;
   }
+}
+
+p {
+  margin-top: 0;
 }
 
 .zone:not(#mlist) .element::after {
