--- a/src/example/style.css
+++ b/src/example/style.css
@@ -97,7 +97,8 @@ details section {
   border: 1px dashed darkgray !important;
 }
 
-[data-role='finding'].drag {
+[data-role='finding'].drag,
+[data-role='finding']:has(.draghandle.drag) {
   box-shadow: 0 0 10px #00f8;
 }
 
